--- a/src/_header.html
+++ b/src/_header.html
@@ -1,5 +1,79 @@
 <header class="header">
-	<div class="header__content _container">
-
+	<div class="header__top top-header">
+		<div class="top-header__content _container">
+			<div class="top-header__column">
+				<div class="top-header__menu menu">
+					<div class="menu__icon icon-menu">
+						<span></span>
+						<span></span
+						><span></span>
+					</div>
+					<nav class="menu__body">
+						<ul class="menu__list">
+							<li><a href="" class="menu__link">Бренды</a></li>
+							<li><a href="" class="menu__link">Распродажа</a></li>
+							<li><a href="" class="menu__link">Доставка и сборка</a></li>
+							<li><a href="" class="menu__link">Гарантия</a></li>
+							<li><a href="" class="menu__link">Оплата</a></li>
+							<li><a href="" class="menu__link">Контакты</a></li>
+						</ul>
+					</nav>
+				</div>
+			</div>
+			<div class="top-header__column">
+				<a href="" class="top-header__logo"><img src="img/logo.png" alt=""/></a>
+			</div>
+			<div class="top-header__column">
+				<div class="top-header__contacts contacts-header">
+					<div class="contacts-header__column">
+						<div class="contacts-header__item contacts-header__item_icon">
+							<div class="contacts-header__label">Москва</div>
+							<a href="tel:123456789" class="contacts-header__phone">8920-897-85-85</a>
+						</div>
+					</div>
+					<div class="contacts-header__column">
+						<div class="contacts-header__item">
+							<div class="contacts-header__label">Бесплатно для Росии</div>
+							<a href="tel:987456321" class="contacts-header__phone">158-458-458</a>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+	<div class="header__bottom bottom-header">
+		<div class="bottom-header__container _container">
+			<div class="bottom-header__column">
+				<ul class="bottom-header__actions actions-header">
+					<li>
+						<a href="" class="action-header__login"><span>Вход</span></a>
+					</li>
+					<li>
+						<a href="" class="action-header__reg"><span>Регистрация</span></a>
+					</li>
+					<li>
+						<a href="mailto:sport@gmail.ru" class="action-header__email"><span>sport@gmail.ru</span></a>
+					</li>
+				</ul>
+			</div>
+			<div class="bottom-header__column">
+				<div class="bottom-header__info info-header">
+					<div class="info-header__column">
+						<a href="" class="info-header__callback"><span>Обратный звонок</span></a>
+					</div>
+					<div class="info-header__column">
+						<div class="info-header__schedule">
+							<p><span>Пн–Пт:</span> 09:00–21:00</p>
+							<p><span>Сб–Вс:</span> 10:00–20:00</p>
+						</div>
+					</div>
+					<div class="info-header__column">
+						<a href="" class="info-header__cart">
+							<span>12</span>
+						</a>
+					</div>
+				</div>
+			</div>
+		</div>
 	</div>
 </header>
