--- a/src/_header.html
+++ b/src/_header.html
@@ -46,13 +46,13 @@
 			<div class="bottom-header__column">
 				<ul class="bottom-header__actions actions-header">
 					<li>
-						<a href="" class="action-header__login"><span>Вход</span></a>
+						<a href="" class="actions-header__login"><span>Вход</span></a>
 					</li>
 					<li>
-						<a href="" class="action-header__reg"><span>Регистрация</span></a>
+						<a href="" class="actions-header__reg"><span>Регистрация</span></a>
 					</li>
 					<li>
-						<a href="mailto:sport@gmail.ru" class="action-header__email"><span>sport@gmail.ru</span></a>
+						<a href="mailto:sport@gmail.ru" class="actions-header__email"><span>sport@gmail.ru</span></a>
 					</li>
 				</ul>
 			</div>
